<resources>
    <string name="app_name">Katching</string>
    <string name="main_login_text">Please add your email and password\n</string>
    <string name="login_btn_title">Login</string>
    <string name="signup_btn_title">Signup</string>
    <string name="your_account_balance">Balance</string>
    <string name="your_account_value">$2,800.80 cad</string>
    <string name="logout_text_one">Thank you for using</string>
    <string name="logout_text_two">Katching</string>
    <string name="logout_text_three">Looking forward to see you soon.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">\tEmail</string>
    <string name="prompt_password">\t**********</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_tag">Username</string>
    <string name="password_tag">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="your_account_title">Your Account</string>
    <string name="balance_title_txt">Balance</string>
    <string name="deposit_title_txt">Deposit</string>
    <string name="transfer_title_txt">Transfer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_username_ex">johnsmith</string>
    <string name="user_s_list">User\'s list</string>
    <!-- Deposit Activity -->
    <string name="txtIncreaseBtn">+</string>
    <string name="txtDecreaseBtn">-</string>
    <string name="txtDepValue">$ 00.00</string>
    <string name="deposit_btn">Deposit</string>
    <!-- Transfer Activity -->
    <string name="transfer_btn">Transfer</string>
    <string name="et_hint_transfer">User email to transfer the money</string>
    <string name="txtTransferValue">$ 00.00</string>
    <string name="main_text">Welcome to \n\n\n\nYour new bank app.</string>
    <string name="main_signup_text">Who are you?\n\nPlease fill the form below</string>
    <string name="txtAppNameMainActivity">Katching</string>
    <string name="transaction_log">Transactions Log</string>
</resources>