<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SecondaryGreen"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/txtPasswordTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/password_tag"
        android:textColor="@color/TextWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/txtUserEmail"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/round_background"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_background_purple"
        android:enabled="true"
        android:fontFamily="@font/roboto"
        android:text="@string/login_btn_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/round_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/txtUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtUserEmail" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/txtEmailTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/username_tag"
        android:textColor="@color/TextWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUserEmail"
        app:layout_constraintStart_toStartOf="@+id/txtUserEmail" />

    <TextView
        android:id="@+id/txtLoginMessage"
        android:layout_width="296dp"
        android:layout_height="142dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rajdhani_bold"
        android:gravity="center"
        android:text="@string/main_login_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>