<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepositActivity">

    <include
        android:id="@+id/toolbar_deposit"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_depositAmount"
        android:layout_width="375dp"
        android:layout_height="250dp"
        android:layout_marginTop="77dp"
        android:background="@drawable/round_background_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_deposit">


        <TextView
            android:id="@+id/tv_value_deposit"
            android:layout_width="162dp"
            android:layout_height="73dp"
            android:fontFamily="@font/rajdhani_medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txtDepValue"
            android:textColor="@color/PrimaryPurple"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.497" />

        <Button
            android:id="@+id/increase_btn_deposit"
            android:layout_width="60dp"
            android:layout_height="73dp"
            android:background="@drawable/round_background"
            android:fontFamily="@font/rajdhani_medium"
            android:text="@string/txtIncreaseBtn"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_value_deposit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_value_deposit"
            app:layout_constraintTop_toTopOf="@+id/tv_value_deposit" />

        <Button
            android:id="@+id/decrease_btn_deposit"
            android:layout_width="60dp"
            android:layout_height="73dp"
            android:background="@drawable/round_background"
            android:fontFamily="@font/rajdhani_medium"
            android:text="@string/txtDecreaseBtn"
            android:textSize="34sp"
            android:textStyle="bold"
            app:iconTint="@color/TextWhite"
            app:layout_constraintBottom_toBottomOf="@+id/tv_value_deposit"
            app:layout_constraintEnd_toStartOf="@+id/tv_value_deposit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_value_deposit"
            app:rippleColor="@color/TextWhite" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/deposit_btn"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_background_purple"
        android:src="@drawable/deposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_depositAmount"
        tools:ignore="SpeakableTextPresentCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>